tests/neg/i16601a.scala
//> using options -explain

@main def Test: Any = new concurrent.ExecutionContext  // error