tests/neg/i16601a.check
-- [E042] Type Error: tests/neg/i16601a.scala:3:26 ---------------------------------------------------------------------
3 |@main def Test: Any = new concurrent.ExecutionContext  // error
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                          ExecutionContext is a trait; it cannot be instantiated
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  | Abstract classes and traits need to be extended by a concrete class or object
  | to make their functionality accessible.
  |
  | You may want to create an anonymous class extending ExecutionContext with
  |   class ExecutionContext { }
  |
  | or add a companion object with
  |   object ExecutionContext extends ExecutionContext
  |
  | You need to implement any abstract members in both cases.
   ---------------------------------------------------------------------------------------------------------------------
